@@ -176,16 +176,6 @@
        <Method name="setDirInternal" />
        <Bug pattern="DM_STRING_CTOR" />
      </Match>
-    <Match>
-      <Class name="org.apache.hadoop.hdfs.shortcircuit.DfsClientShmManager$EndpointShmManager" />
-      <Method name="allocSlot" />
-      <Bug pattern="UL_UNRELEASED_LOCK_EXCEPTION_PATH" />
-    </Match>
-    <Match>
-      <Class name="org.apache.hadoop.hdfs.shortcircuit.DfsClientShmManager$EndpointShmManager" />
-      <Method name="allocSlot" />
-      <Bug pattern="UL_UNRELEASED_LOCK" />
-    </Match>
     <!-- Manually verified to be okay, we want to throw away the top bit here -->
     <Match>
       <Class name="org.apache.hadoop.hdfs.server.namenode.CachedBlock" />
